--- a/mithas-mahal/index.html
+++ b/mithas-mahal/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Discover authentic Indian sweets and savories made with traditional recipes and finest ingredients." />
     <title>Mithas Mahal</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <div id="root"></div>
